add index and search
